--- a/RecipeBook/MainPage.xaml
+++ b/RecipeBook/MainPage.xaml
@@ -1,28 +1,75 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="RecipeBook.MainPage">
+             x:Class="RecipeBook.MainPage"
+             BackgroundColor="DarkGray">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition/> 
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            
-           
-        </Grid.RowDefinitions>
-        
-        <Label Text="CookBook" FontSize="Header" Margin="5" BackgroundColor="Red"  />
 
-        
-       
+ <Grid>
+    <Grid.RowDefinitions>
+        <RowDefinition Height="Auto" />
+        <RowDefinition Height="*" />
+    </Grid.RowDefinitions>
 
+    <!-- Header -->
+    <StackLayout Grid.Row="0" Background="#3498db" VerticalOptions="Center" HorizontalOptions="Center">
+        <Label Text="Cookbook" FontSize="30" TextColor="White" FontAttributes="Bold" Margin="10"/>
+    </StackLayout>
+
+    <!-- Content -->
+    <Grid Grid.Row="1" Margin="20">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <!-- Recipe Details -->
+        <StackLayout Grid.Column="0" Margin="0,0,20,0">
+            <Label Text="Recipe Details" FontSize="18" FontAttributes="Bold" Margin="0,0,0,10"/>
+            <!-- Add textboxes, labels, and other controls for recipe details -->
+        </StackLayout>
+
+        <!-- Recipe List -->
+        <ListView Grid.Column="1" ItemsSource="{Binding Recipes}" Margin="0,0,20,0">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="150*" />
+                                <ColumnDefinition Width="100*" />
+                                <ColumnDefinition Width="100*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Text="{Binding Name}" Grid.Column="0" />
+                            <Label Text="{Binding Type}" Grid.Column="1" />
+                            <Label Text="{Binding Cuisine}" Grid.Column="2" />
+                        </Grid>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+        <!-- Recipe Actions -->
+        <StackLayout Grid.Column="2">
+            <Button Text="Add Recipe" WidthRequest="100" Margin="0,0,0,10"/>
+            <Button Text="Edit Recipe" WidthRequest="100" Margin="0,0,0,10"/>
+            <Button Text="Delete Recipe" WidthRequest="100" Margin="0,0,0,10"/>
+            <Button Text="Export to PDF" WidthRequest="100" Margin="0,0,0,10"/>
+        </StackLayout>
     </Grid>
+</Grid>
+        
+
 
     
-    
+
+
+
+
 
 </ContentPage>
+    
 
+
+ 
